// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when applied with \`test\` option matches snapshot for a single \`test\` value ({RegExp}): assets 1`] = `
Array [
  Array [
    "0.async.js?ver=aafa0e2b0a1b3368379e",
    130,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png",
    78117,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png.gz",
    73160,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg",
    672,
  ],
  Array [
    "js.js?var=aafa0e2b0a1b3368379e",
    10256,
  ],
]
`;

exports[`when applied with \`test\` option matches snapshot for a single \`test\` value ({RegExp}): errors 1`] = `Array []`;

exports[`when applied with \`test\` option matches snapshot for a single \`test\` value ({RegExp}): warnings 1`] = `Array []`;

exports[`when applied with \`test\` option matches snapshot for multiple \`test\` values ({Array<RegExp>}): assets 1`] = `
Array [
  Array [
    "0.async.js?ver=aafa0e2b0a1b3368379e",
    130,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png",
    78117,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png.gz",
    73160,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg",
    672,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg.gz",
    393,
  ],
  Array [
    "js.js?var=aafa0e2b0a1b3368379e",
    10256,
  ],
]
`;

exports[`when applied with \`test\` option matches snapshot for multiple \`test\` values ({Array<RegExp>}): errors 1`] = `Array []`;

exports[`when applied with \`test\` option matches snapshot for multiple \`test\` values ({Array<RegExp>}): warnings 1`] = `Array []`;

exports[`when applied with \`test\` option matches snapshot with empty \`test\` value: assets 1`] = `
Array [
  Array [
    "0.async.js.gz?ver=aafa0e2b0a1b3368379e",
    117,
  ],
  Array [
    "0.async.js?ver=aafa0e2b0a1b3368379e",
    130,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png",
    78117,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png.gz",
    73160,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg",
    672,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg.gz",
    393,
  ],
  Array [
    "js.js.gz?var=aafa0e2b0a1b3368379e",
    2801,
  ],
  Array [
    "js.js?var=aafa0e2b0a1b3368379e",
    10256,
  ],
]
`;

exports[`when applied with \`test\` option matches snapshot with empty \`test\` value: errors 1`] = `Array []`;

exports[`when applied with \`test\` option matches snapshot with empty \`test\` value: warnings 1`] = `Array []`;
